<resources>

    <string name="app_name">ECR Demo</string>

    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="wait_connect">Wait Connect</string>


    <string name="stop_send">Stop Send</string>
    <string name="stop_scan">Stop Scan</string>

    <string name="connected">connected</string>
    <string name="connecting">connecting</string>
    <string name="disconnected">disconnected</string>

    <string name="type_usb">USB</string>
    <string name="type_vsp">VSP</string>
    <string name="type_rs232">RS232</string>
    <string name="type_beacon">iBeacon</string>
    <string name="type_bluetooth">Bluetooth</string>
    <string name="type_wifi">Wifi</string>
    <string name="type_vsp_status">VSP connection status</string>
    <string name="type_extended_test">extended Test</string>


    <string name="dialog_device_type">Please select the device master-slave type</string>
    <string name="dialog_select_bluetooth">Please select a bluetooth device</string>
    <string name="dialog_select_vsp_state">Please select whether to enable USB cable status detection</string>

    <string name="message_send_data">Failed to send data</string>
    <string name="message_select_connect">Please disconnect first, before selecting the communication mode</string>
    <string name="message_bind_ecr_service">Failed to bind ECR Service</string>
    <string name="message_bluetooth_disable">Please turn on the device bluetooth first</string>
    <string name="message_bluetooth_not_support">The device does not support bluetooth</string>
    <string name="message_bluetooth_not_find_bonded">No paired bluetooth found</string>


</resources>