<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fadingEdge="none"
            android:overScrollMode="never"
            tools:itemCount="8"
            tools:listitem="@layout/item_chat_from_user" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/purple_700"
            android:textSize="14sp"
            tools:text="@string/connected" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#D7D7D7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/content_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:maxLines="6"
                android:minHeight="36dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="#333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/send_text"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/send"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:background="#1DD959" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connect_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/connect"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:background="@color/purple_700" />

        <TextView
            android:id="@+id/disconnect_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:background="@color/purple_700" />

        <TextView
            android:id="@+id/stop_send_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/stop_send"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"
            tools:background="@color/purple_700"
            tools:visibility="visible" />

    </LinearLayout>

</RelativeLayout>